--- a/index.html
+++ b/index.html
@@ -66,11 +66,14 @@
 <body>
   <div class="calculator">
     <h1>محاسبه وام</h1>
-    <label for="amount">مقدار مبلغ درخواستی  (ریال):</label>
+    <label for="amount">مقدار مبلغ درخواستی (ریال):</label>
     <input type="number" id="amount" placeholder="Enter loan amount">
 
-    <label for="installments">چند ماهه</label>
+    <label for="installments">چند ماهه:</label>
     <input type="number" id="installments" placeholder="Enter number of installments">
+
+    <label for="interestRate">نرخ سود (%) :</label>
+    <input type="number" id="interestRate" placeholder="Enter interest rate">
 
     <button onclick="calculateInstallment()">محاسبه اقساط</button>
 
@@ -81,19 +84,20 @@
     function calculateInstallment() {
       const amount = parseFloat(document.getElementById('amount').value) || 0;
       const installments = parseInt(document.getElementById('installments').value) || 1;
+      const interestRate = parseFloat(document.getElementById('interestRate').value) || 6.5; // Default to 6.5 if not provided
 
-      if (amount <= 0 || installments <= 0) {
-        alert('Please enter valid values for amount and installments.');
+      if (amount <= 0 || installments <= 0 || interestRate <= 0) {
+        alert('Please enter valid values for amount, installments, and interest rate.');
         return;
       }
 
-      const interest = ( amount * 6.5 * ((installments / 2) + 0.5) ) / 100;
+      const interest = (amount * interestRate * ((installments / 2) + 0.5)) / 100;
       const totalPayable = amount + interest;
       const monthlyInstallment = totalPayable / installments;
 
       const resultDiv = document.getElementById('result');
       resultDiv.style.display = 'block';
-      resultDiv.innerHTML = `<p>مبلغ هر قسط :  <strong>${monthlyInstallment.toFixed(2)}</strong> (ریال)</p>`;
+      resultDiv.innerHTML = `<p>مبلغ هر قسط: <strong>${monthlyInstallment.toFixed(2)}</strong> (ریال)</p>`;
     }
   </script>
 </body>
