--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   <div class="calculator">
     <h1>محاسبه وام</h1>
     <label for="amount">مقدار مبلغ درخواستی (ریال):</label>
-    <input type="number" id="amount" placeholder="Enter loan amount">
+    <input type="text" id="amount" placeholder="Enter loan amount" oninput="formatInput(this)">
 
     <label for="installments">چند ماهه:</label>
     <input type="number" id="installments" placeholder="Enter number of installments">
@@ -81,8 +81,18 @@
   </div>
 
   <script>
+    function formatNumber(num) {
+      return num.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",");
+    }
+
+    function formatInput(input) {
+      let value = input.value.replace(/,/g, ''); // Remove existing commas
+      value = formatNumber(value);
+      input.value = value;
+    }
+
     function calculateInstallment() {
-      const amount = parseFloat(document.getElementById('amount').value) || 0;
+      const amount = parseFloat(document.getElementById('amount').value.replace(/,/g, '')) || 0; // Remove commas before parsing
       const installments = parseInt(document.getElementById('installments').value) || 1;
       const interestRate = parseFloat(document.getElementById('interestRate').value) || 6.5; // Default to 6.5 if not provided
 
@@ -97,7 +107,7 @@
 
       const resultDiv = document.getElementById('result');
       resultDiv.style.display = 'block';
-      resultDiv.innerHTML = `<p>مبلغ هر قسط: <strong>${monthlyInstallment.toFixed(2)}</strong> (ریال)</p>`;
+      resultDiv.innerHTML = `<p>مبلغ هر قسط: <strong>${formatNumber(monthlyInstallment.toFixed(2))}</strong> (ریال)</p>`;
     }
   </script>
 </body>
