--- a/index.html
+++ b/index.html
@@ -15,12 +15,6 @@
       min-height: 100vh;
       background-color: #f3f4f6;
     }
-    .container {
-      text-align: center;
-    }
-    .button-container {
-      margin-bottom: 20px;
-    }
     .calculator {
       background: white;
       padding: 20px;
@@ -28,7 +22,6 @@
       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
       width: 100%;
       max-width: 400px;
-      display: none;
     }
     .calculator h1 {
       font-size: 1.5rem;
@@ -39,7 +32,6 @@
       display: block;
       margin-bottom: 8px;
       font-weight: bold;
-      text-align: left;
     }
     .calculator input {
       width: 100%;
@@ -72,96 +64,90 @@
   </style>
 </head>
 <body>
-  <div class="container">
-    <div class="button-container">
-      <button onclick="showCalculator('bazari')">بازاری</button>
-      <button onclick="showCalculator('banki')">بانکی</button>
-    </div>
-    <div id="bazari" class="calculator">
-      <h1>محاسبه وام</h1>
-      <label for="amount">مقدار مبلغ درخواستی (ریال):</label>
-      <input type="text" id="amount" placeholder="Enter loan amount" oninput="formatInput(this)">
+  <div class="calculator" id="mainMenu">
+    <h1>انتخاب نوع وام</h1>
+    <button onclick="showCalculator('bazari')">بازاری</button>
+    <button onclick="showCalculator('banki')">بانکی</button>
+  </div>
 
-      <label for="installments">چند ماهه:</label>
-      <input type="number" id="installments" placeholder="Enter number of installments">
+  <div class="calculator" id="bazariCalculator" style="display: none;">
+    <h1>محاسبه وام بازاری</h1>
+    <label for="amount">مقدار مبلغ درخواستی (ریال):</label>
+    <input type="text" id="amount" placeholder="Enter loan amount" oninput="formatInput(this)">
 
-      <label for="interestRate">نرخ سود (%) :</label>
-      <input type="number" id="interestRate" placeholder="Enter interest rate">
+    <label for="installments">چند ماهه:</label>
+    <input type="number" id="installments" placeholder="Enter number of installments">
 
-      <button onclick="calculateInstallment()">محاسبه اقساط</button>
-      <div id="result" class="result" style="display: none;"></div>
-    </div>
+    <label for="interestRate">نرخ سود (%) :</label>
+    <input type="number" id="interestRate" placeholder="Enter interest rate">
 
-    <div id="banki" class="calculator">
-      <h1>محاسبه وام بانکی</h1>
-      <label for="bankAmount">مبلغ وام (ریال):</label>
-      <input type="text" id="bankAmount" placeholder="Enter loan amount" oninput="formatInput(this)">
+    <button onclick="calculateBazariInstallment()">محاسبه اقساط</button>
+    <div id="bazariResult" class="result" style="display: none;"></div>
+  </div>
 
-      <label for="totalMonths">تعداد ماه های کل اقساط:</label>
-      <input type="number" id="totalMonths" placeholder="Enter total months">
+  <div class="calculator" id="bankiCalculator" style="display: none;">
+    <h1>محاسبه وام بانکی</h1>
+    <label for="bankAmount">مقدار مبلغ درخواستی (ریال):</label>
+    <input type="text" id="bankAmount" placeholder="Enter loan amount" oninput="formatInput(this)">
 
-      <label for="checkMonths">چند ماه چند ماه چک بدهید:</label>
-      <input type="number" id="checkMonths" placeholder="Enter check intervals">
+    <label for="totalMonths">تعداد ماه های کل اقساط:</label>
+    <input type="number" id="totalMonths" placeholder="Enter total months">
 
-      <label for="bankInterest">نرخ سود (%) :</label>
-      <input type="number" id="bankInterest" placeholder="Enter interest rate">
+    <label for="checkPeriod">چند ماه چند ماه می‌خواهید چک بدهید:</label>
+    <input type="number" id="checkPeriod" placeholder="Enter check period">
 
-      <button onclick="calculateBankInstallment()">محاسبه اقساط</button>
-      <div id="bankResult" class="result" style="display: none;"></div>
-    </div>
+    <label for="bankInterestRate">نرخ سود (%) :</label>
+    <input type="number" id="bankInterestRate" placeholder="Enter interest rate">
+
+    <button onclick="calculateBankiInstallment()">محاسبه اقساط</button>
+    <div id="bankiResult" class="result" style="display: none;"></div>
   </div>
 
   <script>
-    function showCalculator(type) {
-      document.getElementById('bazari').style.display = type === 'bazari' ? 'block' : 'none';
-      document.getElementById('banki').style.display = type === 'banki' ? 'block' : 'none';
-    }
-
     function formatNumber(num) {
       return num.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",");
     }
 
     function formatInput(input) {
-      let value = input.value.replace(/,/g, ''); 
+      let value = input.value.replace(/,/g, '');
       value = formatNumber(value);
       input.value = value;
     }
 
-    function calculateInstallment() {
+    function showCalculator(type) {
+      document.getElementById('mainMenu').style.display = 'none';
+      document.getElementById('bazariCalculator').style.display = (type === 'bazari') ? 'block' : 'none';
+      document.getElementById('bankiCalculator').style.display = (type === 'banki') ? 'block' : 'none';
+    }
+
+    function calculateBazariInstallment() {
       const amount = parseFloat(document.getElementById('amount').value.replace(/,/g, '')) || 0;
       const installments = parseInt(document.getElementById('installments').value) || 1;
       const interestRate = parseFloat(document.getElementById('interestRate').value) || 6.5;
-
-      if (amount <= 0 || installments <= 0 || interestRate <= 0) {
-        alert('لطفا مقادیر معتبر وارد کنید.');
-        return;
-      }
 
       const interest = (amount * interestRate * ((installments / 2) + 0.5)) / 100;
       const totalPayable = amount + interest;
       const monthlyInstallment = totalPayable / installments;
 
-      const resultDiv = document.getElementById('result');
+      const resultDiv = document.getElementById('bazariResult');
       resultDiv.style.display = 'block';
       resultDiv.innerHTML = `<p>مبلغ هر قسط: <strong>${formatNumber(monthlyInstallment.toFixed(2))}</strong> ریال</p>`;
     }
 
-    function calculateBankInstallment() {
+    function calculateBankiInstallment() {
       const amount = parseFloat(document.getElementById('bankAmount').value.replace(/,/g, '')) || 0;
-      const totalMonths = parseInt(document.getElementById('totalMonths').value) || 0;
-      const checkMonths = parseInt(document.getElementById('checkMonths').value) || 0;
-      const interestRate = parseFloat(document.getElementById('bankInterest').value) || 0;
+      const totalMonths = parseInt(document.getElementById('totalMonths').value) || 1;
+      const checkPeriod = parseInt(document.getElementById('checkPeriod').value) || 1;
+      const interestRate = parseFloat(document.getElementById('bankInterestRate').value) || 6.5;
 
-      if (amount <= 0 || totalMonths <= 0 || checkMonths <= 0 || interestRate <= 0) {
-        alert('لطفا مقادیر معتبر وارد کنید.');
-        return;
-      }
+      const interest = (amount * interestRate * (totalMonths + checkPeriod)) / 2400;
+      const totalPayable = amount + interest;
+      const installmentCount = totalMonths / checkPeriod;
+      const installmentAmount = totalPayable / installmentCount;
 
-      const installment = (amount * interestRate * (totalMonths + checkMonths)) / 2400;
-
-      const resultDiv = document.getElementById('bankResult');
+      const resultDiv = document.getElementById('bankiResult');
       resultDiv.style.display = 'block';
-      resultDiv.innerHTML = `<p>مبلغ هر قسط: <strong>${formatNumber(installment.toFixed(2))}</strong> ریال</p>`;
+      resultDiv.innerHTML = `<p>مبلغ هر قسط: <strong>${formatNumber(installmentAmount.toFixed(2))}</strong> ریال</p>`;
     }
   </script>
 </body>
